// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aliexpressApiService getAffiliateLink should call getPromisified with the correct params 1`] = `
[
  "",
  {
    "app_signature": "signature",
    "method": "aliexpress.affiliate.link.generate",
    "promotion_link_type": "0",
    "source_values": "www.test.com",
    "tracking_id": "trackingId",
  },
]
`;

exports[`aliexpressApiService getAffiliateLinks should call getPromisified with the correct params 1`] = `
[
  "",
  {
    "app_signature": "signature",
    "method": "aliexpress.affiliate.link.generate",
    "promotion_link_type": "0",
    "source_values": "www.test.com,www.test2.com",
    "tracking_id": "trackingId",
  },
]
`;

exports[`aliexpressApiService getFeaturedPromoInfo should call getPromisified with the correct params 1`] = `
[
  "",
  {
    "app_signature": "signature",
    "method": "aliexpress.affiliate.featuredpromo.get",
    "tracking_id": "trackingId",
  },
]
`;

exports[`aliexpressApiService getProductsDetails should call getPromisified with the correct params 1`] = `
[
  "",
  {
    "app_signature": "signature",
    "fields": "",
    "method": "aliexpress.affiliate.productdetail.get",
    "product_ids": "12334,4321",
    "target_currency": "USD",
    "target_language": "EN",
    "tracking_id": "trackingId",
  },
]
`;
